alignment issues

--- a/src/App.css
+++ b/src/App.css
@@ -140,7 +140,7 @@ table, th, td {
 .side {
 flex: 57% 1;
 background-color: #f1f1f1;
-padding: 20px;
+padding: 5px;
 color: white;
 font-size: large;
 border: 7px solid #5f249f;
@@ -151,7 +151,7 @@ width: 100%;
 .main {
 flex: 23% 1;
 background-color: white;
-padding: 20px;
+padding: 5px;
 border: 7px solid #5f249f;
 }
 .name{
@@ -189,13 +189,16 @@ text-align: center;
   overflow: hidden;
   box-sizing: border-box;
   background: #5f249f;
-  height:252px;
+  padding: 15px;
 }
 .idea{
   color:#5f249f;
   font-size: 20px;
   text-align: center;
   padding: 20px;
+}
+.logo_align {
+  float: left;
 }
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 700px) {
